# spock-electron

./: README.md  build
backend/: .gitignore  LICENSE  backend.cabal  build  stack.yaml
backend/app/: Main.hs
backend/app/Html/: Attributes.hs  Templates.hs  Types.hs
backend/app/Html/Handler/: Hello.hs  Number.hs  Root.hs
backend/app/Static/: EmbeddedResources.hs  Middleware.hs  Resources.hs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: index.html  index.js
