name:               backend
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/ScottSedgwick/backend#readme
license:            BSD3
license-file:       LICENSE
author:             Scott Sedgwick
maintainer:         ssedgwick@cochlear.com
copyright:          Copyright 1996 Cochlear Ltd
category:           General
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable          backend
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Html.Attributes
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.7 && < 5
                  , Spock >= 0.11
                  , mtl
                  , text
                  , blaze-html
                  , blaze-markup
                  , wai-middleware-static
